modified teaching and research experience pages

--- a/experience.html
+++ b/experience.html
@@ -32,17 +32,17 @@
         <!--  -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul style="list-style-type:none;" id = "listNavi">
-                <!-- to add section heading modify id of section to redirect to
+                 to add section heading modify id of section to redirect to
                 <li class="nav-item">
                     <a class="nav-link" href="nameOfSection.html"> section title </a>
                 </li>
             </ul>
         </div>
     </nav>
-    <!-- Page Content -->
+    <!-- Page Content 
     <!-- Add content and id in this container -->
     <div class="container" id="c1">
-        <h3 style="padding-top:10px;"> EXPERIENCE </h3>
+        <h3 style="padding-top:10px;" > EXPERIENCE </h3>
         <!-- Research and Teaching Interests -->
         <!--<div id="projects-overview">
             <p>
@@ -194,156 +194,6 @@
             <!-- END OF PANELS -->
         </div>
         <!-- END OF RESEARCH EXPERIENCE SECTION -->
-        <!-- Timeline -->
-        <!-- Teaching Experience -->
-        <h3 style="padding-top:10px;"> TEACHING EXPERIENCE </h3>
-        <br />
-        <div class="timeline left" style="padding-bottom:10px;">
-            <!-- Event 1 -->
-            <div class="container_t">
-                <div class="content">
-                    <h5>International Summer Program Mentor</h5> <h6> University of Alabama <br /> May. 2015 - Aug. 2015 </h6>
-                    <b>
-                        Virtual Reality based Stroke Rehabilitation with Smart Gloves
-                    </b>
-                    <p>
-                        Guided senior international students from Brazil. Introduced modern wearable sensor technologies
-                        and concepts of serious games. Taught computer graphics and virtual reality game design. Guided
-                        the students to learn machine learning algorithms for gesture classification.
-                    </p>
-                </div>
-            </div>
-            <!-- Event 2 -->
-            <div class="container_t">
-                <div class="content">
-                    <h5>Part-time Lecturer</h5> <h6> University of Alabama <br /> May. 2015 - Aug. 2015 </h6>
-                    <b>
-                        Virtual Reality Enhanced Robotic Systems for Disability Rehabilitation
-                    </b>
-                    <p>
-                        Guided senior international students from Brazil. Introduced modern wearable sensor technologies
-                        and concepts of serious games. Taught computer graphics and virtual reality game design. Guided
-                        the students to learn machine learning algorithms for gesture classification.
-                    </p>
-                </div>
-            </div>
-            <!-- Event 3 -->
-            <div class="container_t">
-                <div class="content">
-                    <h5>Senior Capstone Design Mentor</h5> <h6> University of Alabama <br /> Jan. 2015 - May. 2015 </h6>
-                    <b>
-                        Wearable Biomedical Sensor Systems - EEG, ECG, Respiration, and Motion Sensors
-                    </b>
-                    <p>
-                        We utilized the wearable sensor systems from the company BioRadio. We studied the composition
-                        of the sensors, and the features of the bio-signals.The students built data analysis algorithms
-                        with the state of the art machine learning methods. The system included nice visual and audio
-                        human-machine interactions.
-                    </p>
-                </div>
-            </div>
-            <!-- Event 4 -->
-            <div class="container_t">
-                <div class="content">
-                    <h5>Senior Capstone Design Mentor</h5> <h6> University of Alabama <br /> Aug. 2014 - May. 2015 </h6>
-                    <b>
-                        A Biofeedback System for Virtual Reality Study
-                    </b>
-                    <p>
-                        We built the virtual reality games for example the virtual kitchen by using the Unreal Engine, a
-                        game development tool. We also used the leap motion device as one biofeedback tool for hand
-                        motion. Some other sensors such as digital gloves were also involved for comparison. Finally, we
-                        integrated the virtual reality games with biofeedback devices.
-                    </p>
-                </div>
-            </div>
-            <!-- Event 5 -->
-            <div class="container_t">
-                <div class="content">
-                    <h5>Graduate Teaching Assistant</h5> <h6> University of Alabama <br /> Jan. 2015 - May. 2015 </h6>
-                    <b>
-                        ECE 285: Programming for Elec. and Comp. Eng. (class instructor: Dr. Jeff Jackson)
-                    </b>
-                    <p>
-                        <ul>
-                            <li>
-                                Introduced students to learn C programming language
-                            </li>
-                            <li>
-                                Developed projects involving real life applications
-                            </li>
-                            <li>
-                                Instructed and graded five sections of projects (110 students)
-                            </li>
-                        </ul>
-                    </p>
-                </div>
-            </div>
-            <!-- Event 6 -->
-            <div class="container_t">
-                <div class="content">
-                    <h5>Graduate Teaching Assistant</h5> <h6> University of Alabama <br /> Aug. 2014 - Dec. 2014 </h6>
-                    <b>
-                        ECE 480: Digital System Design (class instructor: Dr. Jeff Jackson)
-                    </b>
-                    <p>
-                        <ul>
-                            <li>
-                                Instructed students to do labs using Altera ED2 development and education board
-                            </li>
-                            <li>
-                                Taught VHDL digital logic design in several study sessions (60 students)
-                            </li>
-                            <li>
-                                Instructed and graded eight sections of labs
-                            </li>
-                        </ul>
-                    </p>
-                </div>
-            </div>
-            <!-- Event 7 -->
-            <div class="container_t">
-                <div class="content">
-                    <h5>Graduate Teaching Assistant</h5> <h6> University of Alabama <br /> Jan. 2014 - May. 2014 </h6>
-                    <b>
-                        ECE 490: Communications (class instructor: Dr. Fei Hu)
-                    </b>
-                    <p>
-                        <ul>
-                            <li>
-                                Instructed students to do labs using Altera ED2 development and education board
-                            </li>
-                            <li>
-                                Taught several study sessions about assignments and tests review
-                            </li>
-                            <li>
-                                Took over couple of classes during the absence of professor (32 students)
-                            </li>
-                        </ul>
-                    </p>
-                </div>
-            </div>
-            <!-- Event 8 -->
-            <div class="container_t">
-                <div class="content">
-                    <h5>Part-time Lecturer</h5> <h6> University of Alabama <br /> Aug. 2012 - Dec. 2013 </h6>
-                    <b>
-                        ECE 285: Programming for Elec. and Comp. Eng. (class instructor: Dr. Qi Hao)
-                    </b>
-                    <p>
-                        <ul>
-                            <li>
-                                Installed Eclipse and Xcode for Windows and Mac Operation Systems
-                            </li>
-                            <li>
-                                Taught C programming in study sessions and five sections of labs (>80 students)
-                            </li>
-                        </ul>
-                    </p>
-                </div>
-            </div>
-        </div>
-        <!-- END OF TEACHING EXPERIENCE SECTION -->
     </div>
     <!-- JavaScript -->
     <!-- Bootstrap core JavaScript
