commented out instructions to add section to navbar

--- a/experience.html
+++ b/experience.html
@@ -32,10 +32,10 @@
         <!--  -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul style="list-style-type:none;" id = "listNavi">
-                 to add section heading modify id of section to redirect to
+                 <!--to add section heading modify id of section to redirect to
                 <li class="nav-item">
                     <a class="nav-link" href="nameOfSection.html"> section title </a>
-                </li>
+                </li>-->
             </ul>
         </div>
     </nav>
