--- a/courses.html
+++ b/courses.html
@@ -45,7 +45,7 @@
         </div>
     </nav>
 
-    <div class="container" id="c1">
+    <div class="container" id="c1">   
         <h1>Courses taught</h1>
         <div class="row">
             <div class="col-3">
@@ -87,6 +87,23 @@
                 </div>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-3">
+                <div class="card-deck">
+                    <div class="card">
+                        <img class="card-img-top" src="assets/img/webprog.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">CS 4300: Web Programming</h5>
+                            <p class="card-text">An introduction to Web programming using HTML, CSS, Java Script, PHP and MySQL with an emphasis on developing and designing dynamic Web pages in the client-server model. </p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
