--- a/courses.html
+++ b/courses.html
@@ -46,7 +46,8 @@
     </nav>
 
     <div class="container" id="c1">
-        <h1>Courses taught</h1>
+        <h1>Courses Taught</h1>
+        <br>
         <div class="row">
             <div class="col-3">
                 <div class="card-deck">
@@ -57,7 +58,6 @@
                             <p class="card-text">Development of methods for organizing and processing data sets. Types of data structures analyzed include linear lists, stacks, queues, trees, and graphs. Algorithm analysis methods are used throughout to analyze the various data structures and algorithm design alternatives.</p>
                         </div>
                         <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
                         </div>
                     </div>
                 </div>
@@ -70,7 +70,6 @@
                         <p class="card-text">Organization of general-purpose computers; data representation and arithmetic; instruction sets architectures and addressing modes; memory hierarchies, input/output and storage, and alternative architecture.</p>
                     </div>
                     <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
                     </div>
                 </div>
             </div>
@@ -82,7 +81,6 @@
                         <p class="card-text">Arrays, records (C++ structs), classes and data abstraction, object-oriented software development, pointers, dynamic data structures, linked structures, elementary and searching and sorting algorithms, recursion, an introduction to algorithm complexity analysis.</p>
                     </div>
                     <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
                     </div>
                 </div>
             </div>
