--- a/publications.html
+++ b/publications.html
@@ -43,11 +43,13 @@
     <!-- Page Content -->
     <!-- Add content and id in this container -->
     <div class="container" id="c1">
-        <h3 style="padding-top:10px;"> PUBLICATIONS </h3>
+        <h3 style="padding-top:10px;"> Publications </h3>
+        <br>
         <!-- Research and Teaching Interests -->
         <div id="projects-overview">
             <p>
-                <b style="font-size: 16pt;"> Peer-review Journals </b>
+                <!--<img src="assets/img/star.png" alt=""style=";width:1.5%; height:1.5%">-->
+                <b style="font-size: 16pt;"><font size="4">⭐</font>Peer-review Journals </b>
                 <ul>
         <li>J. Lu, <strong><u>Ting Zhang</strong></u>, Q. Sun, Q. Hao, and F. Hu, “Binary compressive tracking,” <em>IEEE
          Transactions on Aerospace and Electronic Systems.</em>, vol. 53, pp. 1755–1768, 2017.</li>
@@ -60,7 +62,7 @@
             </p>
 
             <p>
-                <b style="font-size: 16pt;"> Peer-reviewed Conferences </b>
+                <b style="font-size: 16pt;" ><font size="4">⭐</font>Peer-reviewed Conferences </b>
                 <ul>
         <li>“Using the smart glove with visual biofeedback for hand rehabilitation,” in <em>2017 HENAAC conference</em>, 2017, abstract.</li>
         <li>“A dynamic website for pre-hurricane preparation, in-hurricane service and post-hurricane reconstruction based on houston storm harvey,” in <em>2017 HENAAC conference</em>, 2017, abstract.</li>
@@ -87,7 +89,7 @@
             </p>
 
             <p>
-                <b style="font-size: 16pt;"> Book Chapters </b>
+                <b style="font-size: 16pt;"><font size="4">⭐</font>Book Chapters </b>
                    <ul>
         <li><strong><u>Ting Zhang</u></strong> and Fei Hu. Controller architecture and performance in software-defined networks. <em>Network Innovation through OpenFlow and SDN: Principles and Design</em>, page 121, 2014.</li>
         <li><strong><u>Ting Zhang</u></strong>, Jiang Lu, Rui Ma, Koushik K, and Xin Li. Low-cost, home-oriented neuropatient monitoring: Towards an information geometry based manifold assembly for gait irregularity and disorder capture (itmagic). <em>Virtual Reality enhanced robotic systems for disability rehabilitation.</em></li>
@@ -97,7 +99,7 @@
             </p>
 
             <p>
-                <b style="font-size: 16pt;"> Workshops </b>
+                <b style="font-size: 16pt;"><font size="4">⭐</font>Workshops </b>
                     <ul>
         <li><strong><u>Ting Zhang</u></strong>, L. Wu, and H. Zheng, “Classification of postures and activities for stroke patients,” in <em>Workshop for Women in Machine Learning</em>, Lake Tahoe, NV, Dec. 2012.</li>
         <li><strong><u>Ting Zhang</u></strong>, H. Zheng, and L. Wu, “Classification of postures and activities for stroke patients,” in <em>Using Fussy Logic for The Control of Vechicle in Parallel Parking</em>, Lake Tahoe, NV, Dec. 2012.</li>
