--- a/Award.html
+++ b/Award.html
@@ -44,7 +44,7 @@
     <!-- Page Content -->
     <!-- Add content and id in this container -->
     <div class="container" id="c1">
-            <h1>Award </h1>
+            <h1>AWARD </h1>
             <br>
             <div class="card text-white bg-primary mb-3" style="max-width: 100%;">
                     <div class="card-body">
