--- a/courses.html
+++ b/courses.html
@@ -46,7 +46,7 @@
     </nav>
 
     <div class="container" id="c1">
-        <h1>Courses Taught</h1>
+        <h1>COURSES TAUGHT</h1>
         <br>
         <div class="row">
             <div class="col-3">
