--- a/publications.html
+++ b/publications.html
@@ -43,7 +43,7 @@
     <!-- Page Content -->
     <!-- Add content and id in this container -->
     <div class="container" id="c1">
-        <h3 style="padding-top:10px;"> Publications </h3>
+        <h3 style="padding-top:10px;"> PUBLICATIONS </h3>
         <br>
         <!-- Research and Teaching Interests -->
         <div id="projects-overview">
