--- a/home.html
+++ b/home.html
@@ -6,65 +6,24 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-    <title> Home </title>
+    <title> Projects </title>
     <link href="album.css" rel="stylesheet">
 </head>
 
 <body>
     <!-- Page Content -->
-        <!-- navbar -->
-        <nav class="navbar navbar-expand navbar-light bg-light" style="color:white; vertical-align: middle; align-content:center;" id="nav1">
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="color:white; vertical-align: middle; align-content:center;" id="nav1">
 
-        </nav>
-        <!-- Page Content -->
-        <!-- Add content and id in this container -->
-        <div class="container" id="c1">
-
-            <!-- Image Carousel -->
-            <!-- Images will cycle automatically -->
-            <div id="carouselHome" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselHome" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselHome" data-slide-to="1"></li>
-                    <li data-target="#carouselHome" data-slide-to="2"></li>
-                </ol>
-                <!-- Wrappers for slides -->
-                <!-- Change carousel images here -->
-                <!--
-                      <img src="assets/img/image_name.jpg" alt="alt image text" />
-                -->
-                <div class="carousel-inner justify-content-center">
-                    <div class="carousel-item active">
-                        <img src="assets/img/x.jpg" alt="temp img 1" />
-                    </div>
-                    <div class="carousel-item">
-                        <img src="assets/img/y.jpg" alt="temp img 2" />
-                    </div>
-                    <div class="carousel-item">
-                        <img src="assets/img/z.jpg" alt="temp img 3" />
-                    </div>
-                </div>
-
-            </div>
-            <ul style="position:center;">
-                <li>
-                    text
-                </li>
-                <li>
-                    text
-                </li>
-                <li>
-                    text
-                </li>
-                <li>
-                    text
-                </li>
-            </ul>
-            <img src="assets/img/blank_img.jpg" />
-            <img src="assets/img/x.jpg" />
-            <img src="assets/img/y.jpg" />
-        </div>
+    </nav>
+    <!-- Page Content -->
+    <!-- Add content and id in this container -->
+    <!-- when adding new cards rename instances of 'projectPaneln', for n, project number -->
+    <div class="container" id="c1">
+        
+        <!-- END OF PROJECTS SECTION -->
+    </div>
+    <!-- JavaScript -->
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -72,7 +31,6 @@
     <script src="assets/js/popper.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="navi.js"></script>
-
 </body>
 
 </html>
