modified education.html linked home.html in navi.js removed active class within navi.js

--- a/education.html
+++ b/education.html
@@ -21,108 +21,75 @@
     <div class="container" id="c1">
         <h3 style="padding-top:10px;"> EDUCATION </h3>
         <br>
-        <!--Collapse/ Expand Panel -->
-        <!-- To add another panel, copy/paste and rename data-target, id of the respective panel to same unique names -->
+        <!-- Panels -->
+        <!-- To add another panel, copy/paste div section with panel class -->
         <div class="panel-group" id="panelGroup">
             <!-- Panel 1 -->
             <div class="panel">
-                <button type="button" class="btn btn-success-panel btn-block" data-toggle="collapse" data-target="#panel" style="max-width:inherit;" aria-expanded="false">
-                    <!-- Position -->
-                    <h5 style="float:left;"> SENIOR RESEARCH ASSISTANT </h5>
-                    <!-- Location -->
-                    <h6 style="float:right;"> University of Alabama </h6>
-                </button>
-                <div id="panel" class="collapse panelText">
+                <div class="card text-white mb-3" style="max-width: 100%;">
+                    <div class="card-body" style="padding-top:5px;" id="educationCardColor">
+                        <!-- Degree -->
+                        <h5 style="float:left;"> Ph.D. in Electrical and Computer Engineering </h5>
+                        <!-- Date -->
+                        <h6 style="float:right;"> Dec. 2015 </h6>
+                        <!-- University -->
+                        <br />
+                        <p style="float:left; position:fixed;"> The University of Alabama </p>
+                        <!-- Location -->
+                        <p style="float:right; position:fixed; right:6%;"> Tuscaloosa, AL </p>
+                    </div>
+                </div>
+                <!-- Dissertation - Thesis - Etc. -->
+                <div id="panel" class="panelText" style="display:inline-block; position:relative; width:100%; margin-bottom:10px;">
                     <b>
-                        Development of Instrument on Robot-aided, Cognitive Virtual Rehabilitation for Automatic
-                        Physical Training of Individuals with Disabilities (iRAPID)
+                        Dissertation: iWEAR - Intelligent Wearable Sensor Systems for Disability Rehabilitation
                     </b>
-                    <br />
-                    <i>
-                        Jan. 2014 - Dec. 2015
-                    </i>
-                    <ul>
-                        <li>
-                            Designed the system Digital Gloves with a 3D blooming flower for stroke rehabilitation. The digital
-                            gloves included five bending sensors and three dimensional motion sensors. The game designed
-                            was using OpenGL graphical software. The upper-body motion analysis algorithm involves gesture
-                            recognition and finger movement analysis
-                        </li>
-                        <li>
-                            Built the system Digital Gloves with the Virtual Piano for stroke rehabilitation. The algorithm to
-                            determine notes was inspired by step-counting algorithms designed for SmartShoe sensors. The
-                            system was validated by non-piano players and myself as a twenty-years experienced piano player.
-                        </li>
-                        <li>
-                            Performed a study for daily activity analysis with the SmartSocks. The SmartSocks was designed
-                            with bending sensors and gyroscopes. The activity analysis algorithm involves Support Vector
-                            Machines.
-                        </li>
-                    </ul>
                 </div>
             </div>
             <!-- Panel 2 -->
             <div class="panel">
-                <button type="button" class="btn btn-success-panel btn-block" data-toggle="collapse" data-target="#panel2" style="max-width:inherit;" aria-expanded="false">
-                    <!-- Position -->
-                    <h5 style="float:left;"> RESEARCH ASSISTANT </h5>
-                    <!-- Location -->
-                    <h6 style="float:right;"> University of Alabama </h6>
-                </button>
-                <div id="panel2" class="collapse panelText">
+                <div class="card text-white mb-3" style="max-width: 100%;">
+                    <div class="card-body" style="padding-top:5px;" id="educationCardColor">
+                        <!-- Degree -->
+                        <h5 style="float:left;"> M.S. in Computer Science </h5>
+                        <!-- Date -->
+                        <h6 style="float:right;"> Aug. 2011 </h6>
+                        <!-- University -->
+                        <br />
+                        <p style="float:left; position:fixed;"> University of Texas at Brownsville </p>
+                        <!-- Location -->
+                        <p style="float:right; position:fixed; right:6%;"> Brownsville, TX </p>
+                    </div>
+                </div>
+                <!-- Dissertation - Thesis - Etc. -->
+                <div id="panel" class="panelText" style="display:inline-block; position:relative; width:100%; margin-bottom:10px;">
                     <b>
-                        Longitudinal Assessment of Risk of Falling
+                        Thesis: Using Particle Swarm Optimization for Mining LIGO Data: A Preliminary Study
                     </b>
-                    <br />
-                    <i>
-                        Sep. 2011 - Dec. 2013
-                    </i>
-                    <ul>
-                        <li>
-                            Created a cyber-physical system platform with SmartShoe sensors, android applications and the
-                            remote servers to wirelessly monitor lower-body activities and provide biofeedback. The system
-                            involves ubiquitous computing with algorithms running in sensors, mobile phones and servers.
-                        </li>
-                        <li>
-                            Developed and compared several pattern recognition methods, such as Decision Trees, Support
-                            Vector Machines and Neural Networks for daily activity classification, including sitting, standing,
-                            walking, bicycling and climbing stairs.
-                        </li>
-                        <li>
-                            Extended the study utilizing the SmartShoes and the platform I had built for free living population
-                            of stroke patients and children with Cerebral palsy.
-                        </li>
-                    </ul>
                 </div>
             </div>
             <!-- Panel 3 -->
             <div class="panel">
-                <button type="button" class="btn btn-success-panel btn-block" data-toggle="collapse" data-target="#panel3" style="max-width:inherit;" aria-expanded="false">
-                    <!-- Position -->
-                    <h5 style="float:left;"> RESEARCH ASSISTANT </h5>
-                    <!-- Location -->
-                    <h6 style="float:right;"> University of Alabama </h6>
-                </button>
-                <div id="panel3" class="collapse panelText">
+                <div class="card text-white mb-3" style="max-width: 100%;">
+                    <div class="card-body" style="padding-top:5px;" id="educationCardColor">
+                        <!-- Degree -->
+                        <h5 style="float:left;"> B.S. in Computer Engineering </h5>
+                        <!-- Date -->
+                        <h6 style="float:right;"> Jul. 2008 </h6>
+                        <!-- University -->
+                        <br />
+                        <p style="float:left; position:fixed;"> Tianjin University </p>
+                        <!-- Location -->
+                        <p style="float:right; position:fixed; right:6%;"> Tianjin, China </p>
+                    </div>
+                </div>
+                <!-- Dissertation - Thesis - Etc. -->
+                <div id="panel" class="panelText" style="display:inline-block; position:relative; width:100%; margin-bottom:10px;">
                     <b>
-                        Cognitive Sensing Research Infrastructure for Distributed Behavioral Biometrics
+                        Thesis: 3D Computer Graphical Modeling and Simulation of Virtual Clouds
+                        <br /> <!-- for break to next line -->
+                        Graduated with honors
                     </b>
-                    <br />
-                    <i>
-                        Jan. 2012 - Dec. 2013
-                    </i>
-                    <ul>
-                        <li>
-                            Designed three-layer sensing system architecture with a reconfigurable hardware platform which
-                            includes the sensing board, FPGA computing board and power management board
-                        </li>
-                        <li>
-                            Created four agents: sensing, action, three-layer decision agents and the database agent
-                        </li>
-                        <li>
-                            Built 3D human visualization stick model for human-computer interaction
-                        </li>
-                    </ul>
                 </div>
             </div>
             <!-- END OF PANELS -->
