matched headers' size removed padding in sections' headers

--- a/education.html
+++ b/education.html
@@ -19,7 +19,7 @@
     <!-- Page Content -->
     <!-- Add content and id in this container -->
     <div class="container" id="c1">
-        <h3 style="padding-top:10px;"> EDUCATION </h3>
+        <h3> EDUCATION </h3>
         <br>
         <!-- Panels -->
         <!-- To add another panel, copy/paste div section with panel class -->
