--- a/experience.html
+++ b/experience.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <title> Experience </title>
-    <br>
     <link href="album.css" rel="stylesheet">
 </head>
 
@@ -35,7 +34,7 @@
             </p>
         </div>-->
         <!-- Research Experience -->
-        <h3 style="padding-top:10px;"> RESEARCH EXPERIENCE </h3>
+        <h3> RESEARCH EXPERIENCE </h3>
         <br>
         <!--Collapse/ Expand Panel -->
         <!-- To add another panel, copy/paste and rename data-target, id of the respective panel to same unique names -->
