--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
     <!-- when adding new cards rename instances of 'projectPaneln', for n, project number -->
     <div class="container" id="c1">
         <!-- PROJECTS -->
-        <h3 style="padding-top:10px;"> PROJECTS </h3>
+        <h3> PROJECTS </h3>
         <div id="projects-overview">
             <p>
                 Projects Overview.
