--- a/Award.html
+++ b/Award.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 
 <head>
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-    <title> Experience </title>
+    <title> Award </title>
     <link href="album.css" rel="stylesheet">
 </head>
 
@@ -44,7 +44,7 @@
     <!-- Page Content -->
     <!-- Add content and id in this container -->
     <div class="container" id="c1">
-            <h1>AWARD </h1>
+            <h3>AWARD </h3>
             <br>
             <div class="card text-white bg-primary mb-3" style="max-width: 100%;">
                     <div class="card-body">
