--- a/courses.html
+++ b/courses.html
@@ -27,7 +27,7 @@
     </nav>
 
     <div class="container" id="c1">
-        <h1>COURSES TAUGHT</h1>
+        <h3>COURSES TAUGHT</h3>
         <br>
         <div class="row">
             <div class="col-3">
@@ -83,7 +83,7 @@
                 </div>
             </div>
           </div>
-
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
