added fadeInRight animation added fadeInRight animation to most page elements removed unneccessary styles

--- a/education.html
+++ b/education.html
@@ -25,7 +25,7 @@
         <!-- To add another panel, copy/paste div section with panel class -->
         <div class="panel-group" id="panelGroup">
             <!-- Panel 1 -->
-            <div class="panel">
+            <div class="panel fadeInRight">
                 <div class="card text-white mb-3" style="max-width: 100%;">
                     <div class="card-body" style="padding-top:5px;" id="educationCardColor">
                         <!-- Degree -->
