aligned profile image added educationAnimate id in education.html

--- a/education.html
+++ b/education.html
@@ -25,7 +25,7 @@
         <!-- To add another panel, copy/paste div section with panel class -->
         <div class="panel-group" id="panelGroup">
             <!-- Panel 1 -->
-            <div class="panel fadeInRight">
+            <div class="panel" id="educationAnimated">
                 <div class="card text-white mb-3" style="max-width: 100%;">
                     <div class="card-body" style="padding-top:5px;" id="educationCardColor">
                         <!-- Degree -->
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <!-- Panel 2 -->
-            <div class="panel">
+            <div class="panel"  id="educationAnimated">
                 <div class="card text-white mb-3" style="max-width: 100%;">
                     <div class="card-body" style="padding-top:5px;" id="educationCardColor">
                         <!-- Degree -->
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <!-- Panel 3 -->
-            <div class="panel">
+            <div class="panel"  id="educationAnimated">
                 <div class="card text-white mb-3" style="max-width: 100%;">
                     <div class="card-body" style="padding-top:5px;" id="educationCardColor">
                         <!-- Degree -->
