added animation to biography fixed titles

--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-    <title> Projects </title>
+    <title> Biography </title>
     <link href="album.css" rel="stylesheet">
 </head>
 <body>
@@ -42,7 +42,7 @@
             <li class="list-group-item list-group-item-danger">• Virtual Reality and Human-Machine Interaction</li>
         </ul>
 
-        <!-- END OF PROJECTS SECTION -->
+        <!-- END OF BIOGRAPHY SECTION -->
     </div>
     <!-- JavaScript -->
     <!-- Bootstrap core JavaScript
