Added Contact page (no form action) Added animation to contact page

--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 
 <head>
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-    <title> Projects </title>
+    <title> Contact </title>
     <link href="album.css" rel="stylesheet">
 </head>
 
@@ -18,10 +18,40 @@
     </nav>
     <!-- Page Content -->
     <!-- Add content and id in this container -->
-    <!-- when adding new cards rename instances of 'projectPaneln', for n, project number -->
     <div class="container" id="c1">
-        
-        <!-- END OF PROJECTS SECTION -->
+        <h3> CONTACT </h3>
+        <br>
+        <div class="contactInfo">
+            <div id="email">
+                <img src="assets/img/email.png" />
+                <!-- Edit email here -->
+                <a href="mailto:zhangtin@uhd.edu"> zhangtin@uhd.edu </a>
+            </div>
+            <br />
+            <div id="office" >
+                <img style="float:left;" src="assets/img/map.png" />
+                <!-- Edit office location here -->
+                <p style="left: 25px; padding-top:10px;"> S737 University of Houston Downtown – Houston, TX 77059 </p>
+            </div>
+            <br />
+            <div id="phone">
+                <img src="assets/img/phone.png" />
+                <!-- Edit office number here -->
+                <a href="tel://"> (713) 221-5837 </a>
+            </div>
+            <!-- END OF CONTACT INFO -->
+        </div>
+        <div class="contactForm">
+            <form>
+                <input type="text" name="Name" placeholder="Name" /> <br />
+                <input type="email" name="Email" placeholder="Email" /> <br />
+                <input type="text" name="Subject" placeholder="Subject" /> <br />
+                <textarea cols="30" rows="7" maxlength="1000" placeholder="Message" name="Message"> </textarea> <br />
+                <input type="submit" name="Submit" />
+            </form>
+            <!-- END OF CONTACT FORM -->
+        </div>
+        <!-- END OF CONTACT SECTION -->
     </div>
     <!-- JavaScript -->
     <!-- Bootstrap core JavaScript
