expanded panel within research experience (to show that there is more info.)

--- a/experience.html
+++ b/experience.html
@@ -26,13 +26,13 @@
         <div class="panel-group" id="panelGroup">
             <!-- Panel 1 -->
             <div class="panel">
-                <button type="button" class="btn btn-success-panel btn-block" data-toggle="collapse" data-target="#panel" style="max-width:inherit;" aria-expanded="false">
+                <button type="button" class="btn btn-success-panel btn-block" data-toggle="collapse" data-target="#panel" style="max-width:inherit;" aria-expanded="true">
                     <!-- Position -->
                     <h5 style="float:left;"> SENIOR RESEARCH ASSISTANT </h5>
                     <!-- Location -->
                     <h6 style="float:right;"> University of Alabama </h6>
                 </button>
-                <div id="panel" class="collapse panelText">
+                <div id="panel" class="panelText">
                     <b>
                         Development of Instrument on Robot-aided, Cognitive Virtual Rehabilitation for Automatic
                         Physical Training of Individuals with Disabilities (iRAPID)
