--- a/Award.html
+++ b/Award.html
@@ -44,7 +44,7 @@
     <!-- Page Content -->
     <!-- Add content and id in this container -->
     <div class="container" id="c1">
-            <h3>AWARD </h3>
+            <h3 style="padding-top:10px;">&#9830; AWARD </h3>
             <br>
             <div class="card text-white bg-primary mb-3" style="max-width: 100%;">
                     <div class="card-body">
