--- a/experience.html
+++ b/experience.html
@@ -19,7 +19,7 @@
     <!-- Add content and id in this container -->
     <div class="container" id="c1" >
         <!-- Research Experience -->
-        <h3> RESEARCH EXPERIENCE </h3>
+        <h3 style="padding-top:10px;">&#9830; RESEARCH EXPERIENCE </h3>
         <br>
         <!--Collapse/ Expand Panel -->
         <!-- To add another panel, copy/paste and rename data-target, id of the respective panel to same unique names -->
