--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
     <!-- when adding new cards rename instances of 'projectPaneln', for n, project number -->
     <div class="container biography-section" id="c1">
         <h1>TING ZHANG | Ph.D </h1>
-        <h3>BIOGRAPHY</h3>
+        <h3 style="padding-top:10px;">&#9830;	BIOGRAPHY</h3>
 
         <p>
             <img src="assets/img/TingZhang.jpg" alt="professor" style="width:271px;height:400px; float:right; padding-left:10px;">
@@ -33,13 +33,13 @@
             research activities.
         </p>
         <br>
-        <h4>Research and Teaching interests</h4>
+        <h4>&#9830; RESEARCH AND TEAAXHING INTERESTS</h4>
 
         <ul class="list-group">
             <li class="list-group-item list-group-item-success"><strong>• Data Analysis and Machine Learning</strong></li>
-            <li class="list-group-item list-group-item-info">• Computer Networks and Mobile Computing</li>
-            <li class="list-group-item list-group-item-warning">• Bioinformatics and Healthcare Informatics</li>
-            <li class="list-group-item list-group-item-danger">• Virtual Reality and Human-Machine Interaction</li>
+            <li class="list-group-item list-group-item-info"><strong>• Computer Networks and Mobile Computing</strong></li>
+            <li class="list-group-item list-group-item-warning"><strong>• Bioinformatics and Healthcare Informatics</strong></li>
+            <li class="list-group-item list-group-item-danger"><strong>• Virtual Reality and Human-Machine Interaction</strong></li>
         </ul>
 
         <!-- END OF BIOGRAPHY SECTION -->
