--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-    <title> Services </title>
+    <title>&#9830; Services </title>
     <link href="album.css" rel="stylesheet">
 </head>
 
