--- a/teachingexperience.html
+++ b/teachingexperience.html
@@ -34,7 +34,7 @@
                     </div>-->
                     <!-- Timeline -->
                     <!-- Teaching Experience -->
-                    <h3 style="padding-top:10px;"> TEACHING EXPERIENCE </h3>
+                    <h3 style="padding-top:10px;">&#9830; TEACHING EXPERIENCE </h3>
                     <br />
                     <div class="timeline left" style="padding-bottom:10px;">
                         <!-- Event 1 -->
