--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <!-- Page Content -->
     <!-- Add content and id in this container -->
     <div class="container" id="c1">
-        <h3> CONTACT </h3>
+        <h3 style="padding-top:10px;">&#9830; CONTACT </h3>
         <br>
         <div class="contactInfo">
             <div id="email">
