--- a/courses.html
+++ b/courses.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>Courses</title>
+    <title> Courses</title>
 
     <link href="album.css" rel="stylesheet">
 
@@ -27,7 +27,7 @@
     </nav>
 
     <div class="container" id="c1">
-        <h3>COURSES TAUGHT</h3>
+        <h3 style="padding-top:10px;">&#9830; COURSES TAUGHT</h3>
         <br>
         <div class="row">
             <div class="col-3">
